fix: member update request params and naming
