# models/requests/requests.go
@@ -1,8 +1,7 @@
 package requests
 
-type MemberUpdateRequeset struct {
+type MemberUpdateRequest struct {
 	Name     string `json:"name" binding:"" example:"test"`
-	Age      int64  `json:"age" binding:"" example:"18"`
 	Email    string `json:"email" binding:"email" example:"example@example.com"`
 	Birthday string `json:"birthday" example:"2021-01-01"`
 	Gender   int    `json:"gender" binding:"" example:"1"`
